<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:background="#F1F1F1"
                android:padding="@dimen/_15sdp"
                android:id="@+id/rlBio"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/myProfile"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/myPict"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:src="@drawable/about"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_toRightOf="@+id/myPict"
                        android:layout_centerVertical="true"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/creator_name"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:textSize="@dimen/_16ssp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/creator_email"
                            android:textSize="@dimen/_12ssp"
                            android:textColor="#000000"
                            />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="@dimen/_12sdp"
                                android:layout_height="@dimen/_12sdp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_school_24dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Murid di "
                                android:layout_marginLeft="@dimen/_5sdp"
                                android:textSize="@dimen/_10ssp"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="SMKN 4 Malang"
                                android:textSize="@dimen/_10ssp"
                                android:textColor="#0288D1"
                                />
                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/myProfile"
                    android:text="@string/creator_bio"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="#000000"
                    android:id="@+id/myBio"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/myBio"
                    android:text="LIHAT AKUN MOBILE LEGENDS"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textColor="#0288D1"
                    android:textSize="@dimen/_14ssp"
                    android:id="@+id/tvMl"
                    />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rlBio"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Detail Kontak"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_email_24dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:scaleType="centerCrop"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_18sdp"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/creator_email"
                            android:textSize="@dimen/_14ssp"
                            android:textColor="#000000"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Email Pribadi"
                            android:textSize="@dimen/_12ssp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:background="#979797"
                            />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:orientation="horizontal"
                    android:id="@+id/LlPhone"
                    >
                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/ic_phone_24dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_18sdp"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/creator_phone_number"
                            android:textSize="@dimen/_14ssp"
                            android:id="@+id/TvPhone"
                            android:textColor="#000000"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nomer telepon / Wa"
                            android:textSize="@dimen/_12ssp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:background="#979797"
                            />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:orientation="horizontal"
                    android:id="@+id/LlAddress"
                    >
                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/ic_place_24dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_18sdp"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/creator_address"
                            android:textSize="@dimen/_14ssp"
                            android:textColor="#000000"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Alamat rumah"
                            android:textSize="@dimen/_12ssp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:background="#979797"
                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>





</RelativeLayout>